fixed line break in inactive textboxes

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ textarea + div {
     border-radius: 4px;
     vertical-align: middle;
     box-sizing: border-box;
+    white-space: pre-wrap;
 }
 
 .disclaimer {
